# tahoe

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  ChangeLog.md  README.md  README.rst  cabal.project  cabal.project.freeze  cabal.upgrade.project  flake.nix  project-versions.mk  run-tests.sh  stack.upgrade.yaml  stack.yaml  tahoe-capabilities.cabal  tahoe-great-black-swamp-testing.cabal  tahoe-great-black-swamp-types.cabal  tahoe-great-black-swamp.cabal  tahoe-lafs-storage-server.cabal  tahoe-s3-hand.nix  tahoe-s3-robust.nix  tahoe-s3-shell.nix  tahoe-s3.cabal  tahoe-s3.nix
capabilities/: flake.nix  tahoe-capabilities.cabal
capabilities/app/: Main.hs
capabilities/make-keypairs/: Main.hs
capabilities/src/Tahoe/: CHK.hs  Directory.hs  Netstring.hs  SDMF.hs  Server.hs  Util.hs
capabilities/src/Tahoe/CHK/: Capability.hs  Crypto.hs  Parsing.hs  Share.hs  Types.hs  URIExtension.hs  Validate.hs
capabilities/src/Tahoe/Directory/Internal/: Capability.hs  Parsing.hs
capabilities/src/Tahoe/SDMF/: Keys.hs
capabilities/src/Tahoe/SDMF/Internal/: Capability.hs  Converting.hs  Encoding.hs  Encrypting.hs  Keys.hs  Share.hs
capabilities/test/: 1of2.1  2of3.0  2of3.1  3of10.0  3of10.1  3of10.2  3of10.3  3of10.5  3of10.7  3of10.8  3of10.9  GeneratorsDirectory.hs  SpecCHK.hs  SpecCrypto.hs  SpecDirectory.hs  SpecMerkle.hs  SpecSSK.hs  SpecUEB.hs  SpecUpload.hs  SpecZFEC.hs  Vectors.hs  example.dir  expected_values.py
capabilities/test/data/: 3of10.0  3of10.1  3of10.2  3of10.3  3of10.4  3of10.5  3of10.6  3of10.7  3of10.9  rsa-privkey-1.der  rsa-privkey-2.der  rsa-privkey-3.der  rsa-privkey-4.der  tahoe-lafs-generated-rsa-privkey.der
client-test/: Main.hs
encode-ssk/: Main.hs
project-dhall/: pkg-groups.dhall
project-dhall/ghc-8.10.7/: constraints.dhall  deps-internal.dhall
project-dhall/ghc-8.10.7/text-templates/: stack-snippet.dhall
project-dhall/ghc-9.6.6/: constraints.dhall
project-dhall/ghc-9.6.6/text-templates/: cabal-snippet.dhall  stack-snippet.dhall
project-dhall/ghc-9.8.2/: constraints.dhall  deps-external.dhall
project-dhall/ghc-9.8.2/text-templates/: cabal-snippet.dhall  stack-snippet.dhall
project-dhall/pkgs/: tahoe.dhall
project-nix/ghc-9.6.6/: overlay.nix
project-stackage/: lts-18.28.config  lts-22.36.config
s3/: tahoe-s3.cabal
s3/src/Tahoe/Storage/Backend/: S3.hs
s3/src/Tahoe/Storage/Backend/Internal/: BufferedUploadTree.hs
s3/test/: Main.hs
src/Tahoe/: CHK.hs  Capability.hs
src/Tahoe/CHK/: Cipher.hs  Encrypt.hs  Merkle.hs  SHA256d.hs  Server.hs  Upload.hs
src/Tahoe/Capability/Internal/: Confidential.hs
src/Tahoe/Directory/Internal/: Types.hs
src/Tahoe/Storage/: Backend.hs
src/Tahoe/Storage/Backend/: S3.hs
src/Tahoe/Storage/Backend/Internal/: BufferedUploadTree.hs  Delay.hs
src/Tahoe/Storage/Testing/: Spec.hs
src/TahoeLAFS/Internal/: Client.hs  ServantUtil.hs
src/TahoeLAFS/Storage/: API.hs  APIDocs.hs  Backend.hs  Client.hs  Server.hs
src/TahoeLAFS/Storage/Backend/: Filesystem.hs  Memory.hs  Null.hs  Util.hs
swamp/swamp/: ChangeLog.md  LICENSE  flake.nix  tahoe-great-black-swamp.cabal
swamp/swamp/src/TahoeLAFS/Internal/: Client.hs  ServantUtil.hs
swamp/swamp/src/TahoeLAFS/Storage/: API.hs  APIDocs.hs  Backend.hs  Client.hs  Server.hs
swamp/swamp/src/TahoeLAFS/Storage/Backend/: Filesystem.hs  Util.hs
swamp/swamp/test/: ClientSpec.hs  Main.hs  MiscSpec.hs  Spec.hs  Vectors.hs
swamp/swamp/test/data/: private-key.pem
swamp/testing/: CHANGELOG.md  flake.nix  tahoe-great-black-swamp-testing.cabal
swamp/testing/src/Tahoe/Storage/Testing/: Spec.hs
swamp/types/: CHANGELOG.md  tahoe-great-black-swamp-types.cabal
swamp/types/src/Tahoe/Storage/: Backend.hs
test/: 2of3.2  3of10.4  3of10.6  CBORSpec.hs  ClientSpec.hs  Delay.hs  Generators.hs  GeneratorsSSK.hs  HTTPSpec.hs  Lib.hs  Main.hs  MiscSpec.hs  SemanticSpec.hs  Spec.hs  SpecServer.hs  SpecUtil.hs  Vectors.hs
test/data/: 3of10.8  certificate.pem  rsa-privkey-0.der
