cabal-version:      2.4
name:               tahoe-great-black-swamp
version:            0.1.0.0
build-type:         Simple
synopsis:           An implementation of the "Great Black Swamp" LAFS protocol.
description:
  This package implements the recently proposed "Great Black Swamp" Least
  Authority File Store protocol from the Tahoe-LAFS project.  It also includes
  pieces of a storage server and client implementation based on that protocol.

homepage:
  https://whetstone.private.storage/PrivateStorage/tahoe-great-black-swamp

license:            BSD-3-Clause
license-file:       LICENSE
author:             Least Authority TFA GmbH
maintainer:         jean-paul@leastauthority.com
copyright:          © 2023 Least Authority TFA GmbH
category:
  Cryptography
  , Distributed Computing
  , Filesystem
  , Network
  , Network APIs
  , Security
  , Service
  , Storage
  , Web

extra-source-files: README.rst

common executable-opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

common common-opts
  default-extensions:
    GADTs
    InstanceSigs
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications

  ghc-options:        -Wall
  build-depends:
    , aeson
    , async
    , base
    , binary
    , bytestring
    , containers
    , deriving-aeson
    , directory
    , filepath
    , foldl
    , http-types
    , primitive
    , safe-exceptions
    , text
    , unordered-containers
    , vector

  -- Codecs
  -- Parallelism
  -- Mutability
  -- Binary
  -- Containers
  -- Utilities
  -- the actual app

  default-language:   Haskell2010

library
  import:           common-opts
  hs-source-dirs:   src
  exposed-modules:
    TahoeLAFS.Storage.API
    TahoeLAFS.Storage.APIDocs
    TahoeLAFS.Storage.Backend
    TahoeLAFS.Storage.Backend.Filesystem
    TahoeLAFS.Storage.Backend.Memory
    TahoeLAFS.Storage.Backend.Null
    TahoeLAFS.Storage.Client
    TahoeLAFS.Storage.Server

  other-modules:    TahoeLAFS.Internal.ServantUtil
  default-language: Haskell2010
  build-depends:
    , base               >=4.7 && <5
    , base64-bytestring
    , cborg
    , cborg-json
    , http-api-data
    , http-media
    , scientific
    , serialise
    , servant-client
    , servant-docs
    , servant-server
    , utf8-string
    , wai
    , warp
    , warp-tls

-- executable gbs-generate-apidocs
--   hs-source-dirs:      generate-apidocs
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base
--                      , servant-docs
--                      , pandoc
--                      , data-default
--                      , blaze-html
--                      , tahoe-great-black-swamp
--                      , text

executable client-test
  hs-source-dirs:   client-test
  main-is:          Main.hs
  default-language: Haskell2010
  import:           common-opts
  build-depends:
    , aeson
    , base
    , base32
    , base64
    , bytestring
    , cborg
    , connection
    , containers
    , http-client
    , http-client-tls
    , http-types
    , megaparsec
    , network-uri
    , serialise
    , servant
    , servant-client
    , tahoe-chk
    , tahoe-great-black-swamp
    , text

executable gbs-lafs-storage-server
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
    , base
    , optparse-applicative
    , tahoe-great-black-swamp
    , warp

executable gbs-generate-clients
  hs-source-dirs:   generate-clients
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
    , base
    , filepath
    , servant-js
    , tahoe-great-black-swamp

test-suite http-tests
  import:           common-opts
  import:           executable-opts
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    CBORSpec
    HTTPSpec
    Lib
    MiscSpec
    SemanticSpec
    Spec

  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , base
    , base32string
    , cborg
    , hspec
    , hspec-expectations
    , hspec-wai
    , QuickCheck
    , quickcheck-instances
    , serialise
    , servant
    , tahoe-great-black-swamp
    , temporary
    , vector
    , wai-extra
